--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
+    "@types/styled-components": "^5.1.17",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^8.3.0",
